--- a/src/css/index.css
+++ b/src/css/index.css
@@ -1,14 +1,19 @@
 @import url("https://cdn.jsdelivr.net/gh/orioncactus/pretendard@v1.3.9/dist/web/static/pretendard.min.css");
 
+:root {
+    --vh: 100%;
+}
+
 body, #root{
     font-family: Pretendard, serif;
     margin: 0;
     display: flex;
     flex-direction: column;
-    height: 100vh;
+    height: calc(var(--vh, 1vh) * 100);
     width: 100vw;
     overflow: hidden;
     -webkit-tap-highlight-color: transparent;
+    overflow-y: scroll;
 }
 
 button, a, select {
