--- a/src/css/ChatRoom.css
+++ b/src/css/ChatRoom.css
@@ -78,6 +78,8 @@ body {
     width: 100%;
     height: 48px;
     box-shadow: 0 -2px 4px 0 rgba(0, 0, 0, 0.05);
+    position: sticky;
+    bottom: 0;
 }
 
 .chatRoom_input_container {
@@ -205,3 +207,9 @@ body {
     margin: 0 0 15px 0;
     align-items: flex-end;
 }
+
+.chat_title_container {
+    position: sticky;
+    top: 0;
+}
+
