[DESIGN] 상단바, 하단바 고정

--- a/src/css/Bottombar.css
+++ b/src/css/Bottombar.css
@@ -1,9 +1,12 @@
+.bottom_bar {
+    position: sticky;
+    bottom: 0;
+}
+
 .bottom_tabs {
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    position: sticky;
-    bottom: 0;
     margin: 0;
     box-sizing: border-box;
     width: 100%;
