--- a/src/css/Upperbar.css
+++ b/src/css/Upperbar.css
@@ -1,5 +1,7 @@
 .upper_bar {
     display: flex;
+    position: sticky;
+    top: 0;
     align-items: center;
     padding: 0 20px;
     background: #FFF;
