--- a/src/css/ChatRoom.css
+++ b/src/css/ChatRoom.css
@@ -97,7 +97,7 @@ body {
     background: none;
     border: none;
     resize: none;
-    overflow-y: scroll;
+    overflow-y: auto;
     margin: 5px 0 0 0;
     width: 100%;
     height: 100%;
