[REFACTOR] 최근 채팅 길이 조정, 채팅방 사이즈 조절

--- a/src/css/ChatRoom.css
+++ b/src/css/ChatRoom.css
@@ -65,6 +65,7 @@ body {
     display: flex;
     flex-direction: column;
     overflow-y: scroll;
+    height: calc(100% - 50px);
 }
 
 .chatRoom_chatList_container::-webkit-scrollbar{
