--- a/src/css/ListView.css
+++ b/src/css/ListView.css
@@ -253,6 +253,12 @@
     color: #8E8E8E;
 }
 
+.chatRoom_recentChatMessage {
+    -webkit-line-clamp: 2;
+    -webkit-box-orient: vertical;
+    display: -webkit-box;
+}
+
 .chatRoom_element_container {
     display: flex;
     align-items: center;
