--- a/src/css/ListView.css
+++ b/src/css/ListView.css
@@ -253,6 +253,11 @@
     color: #8E8E8E;
 }
 
+.chatRoom_recentChatCreatedAt {
+    word-break: keep-all;
+    word-wrap: normal;
+}
+
 .chatRoom_recentChatMessage {
     -webkit-line-clamp: 2;
     -webkit-box-orient: vertical;
