[DESIGN] 채팅 시간 줄바꿈 수정

--- a/src/css/ListView.css
+++ b/src/css/ListView.css
@@ -254,9 +254,7 @@
 }
 
 .chatRoom_recentChatCreatedAt {
-    word-break: keep-all;
-    word-wrap: normal;
-    width: 51px;
+    text-wrap: nowrap;
 }
 
 .chatRoom_recentChatMessage {
