--- a/src/css/Community.css
+++ b/src/css/Community.css
@@ -114,12 +114,12 @@ hr {
     background: #6A9CFD;
     display: flex;
     align-items: center;
+    align-self: flex-end;
     padding: 10px;
     font-size: 16px;
-    position: sticky;
+    position: absolute;
     width: fit-content;
-    margin-top: auto;
-    margin-left: auto;
+    bottom: 70px;
 }
 
 .newPostBtn img{
